# xenowing

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
boot_rom/: .gitignore
boot_rom/src/: main.c
boot_rom/xw/src/: uart.c
color-thrust/color-thrust-interface/: Cargo.toml
color-thrust/color-thrust-interface/src/: lib.rs
color-thrust/color-thrust-test-devices/: Cargo.toml
doc/: bus-topology.drawio  bus.md  buster.drawio  color-thrust-pipes.drawio  color-thrust.drawio  dpe.drawio  mem_map.txt  mem_topology.dot  pixel-pipe.drawio
driver/: main.cpp
mimas_a7/rtl/: SyncChain.sv
mimas_a7/test/ddr3/: .gitignore  ddr3.xpr
mimas_a7/test/uart/: .gitignore  uart.xpr
mimas_a7/xenowing/: .gitignore  xenowing.xpr
mimas_a7/xenowing/constraints/: xenowing.xdc
mimas_a7/xenowing/rtl/: Top.sv
misc/lfsr-check/: Cargo.toml
misc/lfsr-check/src/: main.rs
misc/miffed/: Cargo.toml
misc/miffed/src/: main.rs
misc/rom-loader/: Cargo.toml
misc/rom-loader/src/: main.rs
misc/strugl/: Cargo.toml  build.rs
misc/strugl/src/: device.rs  main.rs  matrix.rs  model_device.rs  sim_device.rs  vec2.rs  vec3.rs  vec4.rs
misc/xw-blaster/: Cargo.toml  build.rs
misc/xw-blaster/src/: main.rs  vec4.rs
pocket/br/: Cargo.toml
pocket/br/src/: main.rs
pocket/shovel/: core.json  data.json  info.txt
pocket/shovel/output/: bitstream.rbf_r
program/: Makefile
program/src/: main.c
program/xw/src/: cpu.c
quartus/test/ddr3/: Max10_ddr3_pin_locations.tcl  ddr3.qpf  ddr3.qsf  ddr3.qws  ddr3_assignment_defaults.qdf  ddr3_controller.ppf  ddr3_controller.qip  ddr3_controller.sip  ddr3_controller.spd  ddr3_controller.v  ddr3_controller_p0_all_pins.txt  stp1.stp  (+2 more)
quartus/xenowing/: clk_pll.ppf  clk_pll.qip  clk_pll.v  ddr3_controller.bsf  ddr3_controller.cmp  ddr3_controller.qip  ddr3_controller.sip  ddr3_controller.v  ddr3_controller_p0_summary.csv  program_rom.qip  program_rom.v  program_rom_bb.v  ram.qip  ram.v  stp1.stp  xenowing.qpf  xenowing.qsf  xenowing.qws  xenowing.sdc  xenowing_assignment_defaults.qdf
rom/: .gitignore  Makefile  link.ld  rom.c  rom.s
rom/src/: leds.c  main.c
rtl/: .gitignore  Cargo.toml  alu.sv  alu.v  command_t.vh  cpu.py  cpu_ddr3_interface.sv  ddr3_interface.sv  display.py  display_buffer.sv  fifo.sv  gen_modules.py  hw_top.sv  kaze.py  led_interface.sv  mem_mapper.sv  program_rom_interface.sv  rom_loader.sv  system_bus.sv  uart.py  uart_transmitter.sv  uart_transmitter_clock_divider.sv  xenowing.sv
rtl-old/: .gitignore  cpu_ram_interface.sv  gen_modules.py  ram_interface.sv  reset_synchronizer.sv
rtl-old/uart/: uart_transmitter.sv
rtl/cpu/: alu.sv  alu_op_t.vh  control.sv  core.sv  cpu.sv  decode.sv  execute_mem.sv  instruction_fetch.sv  instruction_fetch_issue.sv  instruction_fetch_wait.sv  load_unit.sv  pc.sv  read_buffer.sv  register_file.sv  store_unit.sv  writeback.sv
rtl/marv/: Cargo.toml
rtl/marv/src/: lib.rs
rtl/src/: approx_reciprocal.rs  bit_pusher.rs  boot_rom.rs  bootloader.rs  buster.rs  buster_mig_ui_bridge.rs  byte_ram.rs  color_thrust.rs  fifo.rs  flow_controlled_pipe.rs  helpers.rs  interconnect.rs  led_interface.rs  lfsr.rs  lib.rs  main.rs  marv.rs  marv_interconnect_bridge.rs  marv_system_bridge.rs  peek_buffer.rs  pocket.rs  read_cache.rs  uart.rs  uart_interface.rs  wire.rs  word_mem.rs  xenowing.rs
rtl/src/color_thrust/: tex_cache.rs
rtl/src/mimas_a7/: test.rs
rtl/src/mimas_a7/test/: lfsr.rs  uart.rs
rtl/src/pocket/: char_display.rs  shovel.rs  video_test_pattern_generator.rs
rtl/test/: ddr3_test.sv  ddr3_test_read_checker.sv  led_clock_divider.sv
rtl/test/ddr3/: command_generator.sv  hw_top.sv  led_clock_divider.sv  read_checker.sv  test.sv
rtl/uart/: uart_clock_divider.sv  uart_receiver.sv  uart_transmitter.sv  uart_transmitter_interface.sv
sim/: alu_driver.cpp  ddr3_test_driver.cpp  xenowing_driver.cpp
sim-old/: ddr3_test_driver.cpp
sim/alu-test/: Cargo.toml
sim/approx-reciprocal/: Cargo.toml  build.rs
sim/buster/: Cargo.toml  build.rs
sim/buster-mig-ui-bridge/: Cargo.toml  build.rs
sim/buster-mig-ui-bridge/src/: lib.rs  main.rs
sim/ddr3-simulator/: Cargo.toml
sim/ddr3-test/: Cargo.toml
sim/fifo/: Cargo.toml  build.rs
sim/flow-controlled-pipe/: Cargo.toml  build.rs
sim/marv/: Cargo.toml  build.rs
sim/marv-test/: Cargo.toml  build.rs
sim/marv-test/src/: main.rs
sim/marv/src/: main.rs
sim/peek-buffer/: Cargo.toml  build.rs
sim/read-cache/: Cargo.toml  build.rs
sim/read-cache/src/: main.rs  tests.rs
sim/skid-buffer/: Cargo.toml  build.rs
sim/xenowing/: Cargo.toml  build.rs
sim/xenowing-test/: Cargo.toml
sw/abstract-device/: Cargo.toml
sw/abstract-environment/: Cargo.toml
sw/boot-rom/: Cargo.toml  link.ld
sw/boot_rom/: Makefile  link.ld
sw/bootloader/: Cargo.toml  build.rs  link.ld
sw/color-thrust-meta/: Cargo.toml
sw/linalg/: Cargo.toml
sw/misc/rename-me/: Cargo.toml
sw/misc/rename-me/src/: main.rs
sw/misc/strugl/: Cargo.toml  build.rs
sw/misc/strugl/src/: main.rs  matrix.rs  sim_device.rs  strugl.rs  vec4.rs
sw/misc/xw-blaster/: Cargo.toml  build.rs
sw/misc/xw-blaster/src/: main.rs  vec2.rs
sw/model-test/: Cargo.toml  build.rs
sw/model-test/src/: main.rs  mem_allocator.rs  model_device.rs  model_environment.rs  sim_device.rs
sw/model-test/src/model_device/: bit_pusher.rs  color_thrust.rs
sw/program/: .gitignore  Cargo.toml  Makefile  link.ld
sw/program/.cargo/: config
sw/program/src/: main.rs  native_device.rs  native_environment.rs
sw/program/xw/src/: display.c  leds.c
sw/qoi/: Cargo.toml
sw/rename-me/: Cargo.toml
sw/rtl-meta/: Cargo.toml
sw/shovel-test/: Cargo.toml  build.rs
sw/shovel-test/src/: main.rs
sw/strugl/: Cargo.toml  build.rs
sw/strugl-test/: Cargo.toml  build.rs
sw/strugl-test/src/: lib.rs
sw/strugl/src/: bit_pusher.rs  lib.rs  model_device.rs  sim_device.rs
sw/test-devices/: Cargo.toml  build.rs
sw/test-devices/src/: lib.rs  model_device.rs  sim_device.rs
sw/trig/: Cargo.toml  build.rs
sw/xw/: Cargo.toml  build.rs
sw/xw-blaster/: Cargo.toml
(+381 files in other folders)
