[workspace]

exclude = [
    "sw/boot-rom",
    "sw/program",
]

members = [
    "mimas_a7/test/ddr3/misc/ddr3-check",
    "mimas_a7/test/uart/misc/uart-check",
    "rtl",
    "sim/approx-reciprocal",
    "sim/buster",
    "sim/buster-mig-ui-bridge",
    "sim/fifo",
    "sim/flow-controlled-pipe",
    "sim/marv",
    "sim/peek-buffer",
    "sim/read-cache",
    "sw/abstract-device",
    "sw/abstract-environment",
    "sw/color-thrust-meta",
    "sw/linalg",
    "sw/model-test",
    "sw/qoi",
    "sw/strugl",
    "sw/strugl-test",
    "sw/trig",
    "sw/xw",
    "sw/xw-blaster",
]
