[package]
name = "rtl"
version = "0.1.0"
authors = ["ferris <yupferris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-thrust-meta = { path = "../sw/color-thrust-meta" }
kaze = { path = "../../kaze/kaze" }#kaze = "0.1"
