[package]
name = "color-thrust-test-devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
color-thrust-interface = { path = "../../color-thrust/color-thrust-interface" }
kaze = { path = "../../../kaze/kaze" } #kaze = "0.1"
rtl = { path = "../../rtl" }

[dependencies]
color-thrust-interface = { path = "../../color-thrust/color-thrust-interface" }
