[package]
name = "buster-mig-ui-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
kaze = { path = "../../../kaze/kaze" }#kaze = "0.1"
rtl = { path = "../../rtl" }

[dependencies]
kaze = { path = "../../../kaze/kaze" }#kaze = "0.1"
rand = "0.7"
rand_chacha = "0.2"
rtl = { path = "../../rtl" }
