[package]
name = "marv"
version = "0.1.0"
authors = ["ferris <yupferris@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
kaze = "0.1"
rtl = { path = "../../rtl" }

[dependencies]
goblin = "0.2"
