[package]
name = "marv"
version = "0.1.0"
authors = ["ferris <yupferris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
kaze = { path = "../../../kaze/kaze" } #kaze = "0.1"
rtl = { path = "../../rtl" }

[dependencies]
goblin = "0.2"
