[package]
name = "model-test"
version = "0.1.0"
authors = ["ferris <yupferris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract-device = { path = "../abstract-device" }
abstract-environment = { path = "../abstract-environment" }
minifb = "0.16"
strugl = { path = "../strugl" }
strugl-test = { path = "../strugl-test" }
test-devices = { path = "../test-devices" }
