[package]
name = "model-test"
version = "0.1.0"
authors = ["ferris <yupferris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
kaze = { path = "../../../kaze/kaze" } #kaze = "0.1"
rtl = { path = "../../rtl" }
rtl-meta = { path = "../rtl-meta" }

[dependencies]
abstract-device = { path = "../abstract-device" }
abstract-environment = { path = "../abstract-environment" }
minifb = "0.16"
rtl-meta = { path = "../rtl-meta" }
strugl = { path = "../strugl" }
strugl-test = { path = "../strugl-test" }
