[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
color-thrust-interface = { path = "../../color-thrust/color-thrust-interface" }
strugl = { path = "../strugl" }
xw = { path = "../xw" }
