[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1

[dependencies]
abstract-device = { path = "../abstract-device" }
env = { path = "../env" }
linalg = { path = "../linalg" }
strugl = { path = "../strugl" }
strugl-test = { path = "../strugl-test" }
xw = { path = "../xw" }
