[package]
name = "rename-me"
version = "0.1.0"
authors = ["ferris <yupferris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract-device = { path = "../abstract-device" }
test-devices = { path = "../test-devices" }
minifb = "0.16"
strugl = { path = "../strugl" }
