[package]
name = "strugl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-thrust-interface = { path = "../../color-thrust/color-thrust-interface" }
env = { path = "../env" }
linalg = { path = "../linalg" }
strugl = { path = "../strugl" }
