[package]
name = "strugl-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
image = "0.24"
qoi = { path = "../qoi" }

[dependencies]
abstract-device = { path = "../abstract-device" }
abstract-environment = { path = "../abstract-environment" }
linalg = { path = "../linalg" }
qoi = { path = "../qoi" }
strugl = { path = "../strugl" }
