[package]
name = "strugl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abstract-device = { path = "../abstract-device" }
color-thrust-meta = { path = "../color-thrust-meta" }
env = { path = "../env" }
linalg = { path = "../linalg" }
