[package]
name = "test-devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
color-thrust-meta = { path = "../color-thrust-meta" }
kaze = { path = "../../../kaze/kaze" } #kaze = "0.1"
rtl = { path = "../../rtl" }

[dependencies]
abstract-device = { path = "../abstract-device" }
color-thrust-meta = { path = "../color-thrust-meta" }
