[package]
name = "rename-me"
version = "0.1.0"
authors = ["ferris <yupferris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-thrust-interface = { path = "../../../color-thrust/color-thrust-interface" }
color-thrust-test-devices = { path = "../../../color-thrust/color-thrust-test-devices" }
image = "0.23"
linalg = { path = "../../linalg" }
minifb = "0.16"
rand = "0.7"
rand_pcg = "0.2.1"
strugl = { path = "../../strugl" }
